2018-05-03  Karl Berry  <karl@freefriends.org>

	* patgen.ch (trie_size, triec_size): increase greatly.
	Request/patch from Werner Lemberg, 27 Apr 2018 07:51:29,
	03 May 2018 13:49:02.

2018-04-14  Karl Berry  <karl@tug.org>

	* TeX Live 2018 release.

2018-02-23  Karl Berry  <karl@freefriends.org>

	* doc/web2c.texi (bibtex invocation): mention need to remove aux
	file from previous run for -min-crossrefs to be effective.
	https://tex.stackexchange.com/questions/123740

2018-02-18  Karl Berry  <karl@tug.org>

	* bibtex.ch (str_ends_with): new fn.
	(print_bib_name, log_pr_bib_name): don't print foo.bib.bib
	when given \bibdata{foo.bib}.

2018-02-03  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* lib/texmfmp.c, texmfmp.h: XeTeX properly close input pipes.
	Fixes https://sourceforge.net/p/xetex/bugs/147

2018-01-21  Karl Berry  <karl@freefriends.org>

	* configure.ac <luatex>: quote [notice] so not misparsed at comma,
	ending up with "bad fd number".

2017-09-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pltotf.ch: web2c extends the range of 'lf' from 0..32767
	into short (-32768..32767), but the overflow here ends up in
	Bad metric (TFM) file. So add a test.

2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2017-03-18  Karl Berry  <karl@tug.org>

	* NEWS,
	* doc/web.texi: version 2017 for TL17.

2017-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Makefile.am: Sync with the LuaTeX upstream.

2017-01-28  Karl Berry  <karl@freefriends.org>

	* tex.ch (texarray),
	* mf.ch (texarray): don't mention nonexistent pool files in error.
	Thread from http://tug.org/pipermail/tex-live/2017-January/039647.html.

2016-11-14  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.h: Change a condition to support new primitives in
	eptex and euptex.

2016-11-05  Karl Berry  <karl@tug.org>

	* help.h (CWEAVEHELP) <-x>: mention section names,