@@ -1,0 +1,6 @@
+% $Id$
+% Bibliography test file for bibtex-auxinclude.test (q.v.).
+% Public domain. Originally written 2018, Karl Berry.
+
+@misc{rmain, title="r-main", author="R. Main"}
+@misc{rsub, title="r-sub", author="R. Sub"}
