@@ -1,3 +1,7 @@
+2018-06-08  Karl Berry  <karl@freefriends.org>
+
+	* common.defines (aopeninwithdirname): add.
+
 2016-04-06  Karl Berry  <karl@tug.org>
 
 	* convert: remove $pascalfile if it is empty,
